--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,31 @@
-
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+cycler==0.10.0
+Flask==1.1.2
+future==0.18.2
+graphic==1.0.0a6
+graphviz==0.16
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.14.1
+kiwisolver==1.1.0
+line-bot-sdk==1.18.0
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+neo4j==4.2.1
+numpy==1.18.2
+pygame==1.9.6
+pyparsing==2.4.6
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+pytz==2020.5
+requests==2.25.1
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+six==1.14.0
+sklearn==0.0
+transitions==0.8.5
+urllib3==1.26.2
+Werkzeug==1.0.1
