--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ line-bot-sdk==1.18.0
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 neo4j==4.2.1
-numpy==1.18.2
+numpy==1.9.2
+nscipy==0.15.1
 pygame==1.9.6
 pyparsing==2.4.6
 python-dateutil==2.8.1
